# pvmetatools

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  avmeta-adjust-time  avmeta-read  avmeta-time-rename  avmeta-write  docker-build  metainfo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  utils.py
pvmeta/: __init__.py  autorename.py  metainfo.py  photo_autorename.py  photorename.py  utils.py  video_adjusttime.py  video_autorename.py
pvmetatools/: autorename.py  metainfo.py  photorename.py  utils.py  video_adjusttime.py  video_metaread.py  video_metawrite.py  videorename.py
tests/: approx.py  data.py  test_autorename.py  test_ensure_unique.py  test_metainfo.py  test_photorename.py  test_utils.py  test_videorename.py
tests/data/: cimg0030.avi
