[tool.poetry]
name = "pvmetatools"
version = "0.1.0"
description = "Tools to manipulate metadata and filenames in photos and videos."
readme = "README.md"
authors = ["Aurelien Gateau <mail@agateau.com>"]
homepage = "https://github.com/agateau/pvmetatools"
repository = "https://github.com/agateau/pvmetatools"
license = "Apache 2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.dependencies]
python = "^3.8"
py3exiv2 = "0.8.0"
arrow = "0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
pvmeta-video-adjusttime = "pvmetatools.video_adjusttime:main"
pvmeta-video-metaread = "pvmetatools.video_metaread:main"
pvmeta-video-metawrite = "pvmetatools.video_metawrite:main"
pvmeta-autorename = "pvmetatools.autorename:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
