[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvmetatools"
version = "0.1.0"
description = "Tools to manipulate metadata and filenames in photos and videos."
readme = "README.md"
authors = [
    {name = "Aurelien Gateau", email = "mail@agateau.com"},
]
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.8"

dependencies = [
    "py3exiv2==0.8.0",
    "arrow==0.17.0",
]

[project.urls]
Repository = "https://github.com/agateau/pvmetatools"

[project.scripts]
pvmeta-video-adjusttime = "pvmetatools.video_adjusttime:main"
pvmeta-video-metaread = "pvmetatools.video_metaread:main"
pvmeta-video-metawrite = "pvmetatools.video_metawrite:main"
pvmeta-autorename = "pvmetatools.autorename:main"

[tool.pyright]
include = [
    "pvmetatools",
    "tests",
]
reportMissingParameterType = true
